syntax = "proto3";
package nova.intertx.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/Carina-labs/nova/x/inter-tx/types";

message RegisteredZone {
  string zone_name = 1;
  IcaConnectionInfo ica_connection_info = 2;
  TransferConnectionInfo transfer_connection_info = 3;
  string validator_address = 4;
  string base_denom = 5;
  string sn_denom = 6;
  string st_denom = 7;
  string authz_address = 8;
  //repeated string authz_permit = 9;
}

message IcaAccount {
  string zone_name = 1;
  string owner_address = 2;
  cosmos.base.v1beta1.Coin balance = 3 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false
  ];
}

//zone name, connection id, portID(owner address)
message IcaConnectionInfo {
  string connection_id = 1;
  string owner_address = 2;
}

message TransferConnectionInfo {
  string connection_id = 1;
  string port_id = 2;
  string channel_id = 3;
}